# SimpleRayTracer

./: CMakeLists.txt
model_runner/: BUILD  CMakeLists.txt  README.md  context.cpp  context.h  dtype.h  image.cpp  image.h  ml.h  model.cpp  model.h  model_runner.h  test_app.cpp  utils.h
path_tracer/: CMakeLists.txt
path_tracer/RadeonRaysNext/include/: radeonrays.h
path_tracer/shaders/: ao_rays.comp  ao_rays.comp.spv  ao_rays_advanced.comp  ao_rays_resolve.comp  ao_rays_resolve.comp.spv  camera_rays.comp  camera_rays.comp.spv  camera_rays_advanced.comp  common.h  pt_rays.comp  pt_rays.comp.spv  pt_rays_resolve.comp  pt_rays_resolve.comp.spv
path_tracer/src/: AccelerationStructureController.cpp  AccelerationStructureController.h  AoSample.cpp  AoSample.h  Application.cpp  Application.h  InferenceEngine.h  MBPathTracing.cpp  MBPathTracing.h  Orbit.cpp  Orbit.h  PathTraceImpl.cpp  PathTraceImpl.h  PathTracerImpl.cpp  PathTracerImpl.h  Pipeline.cpp  Pipeline.h  SceneController.cpp  SceneController.h  TraceAlgo.h  VulkanManager.cpp  VulkanManager.h  Window.cpp  Window.h  main.cpp
path_tracer/src/model_holder/: model_holder.cpp  model_holder.h  model_runner_wrappers.hpp
